🧪  vercel https변경 test 2

--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
     {
       "source": "/video/:id",
       "destination": "http://kajj8808.store:8000/video/:id"
+    },
+    {
+      "source": "/subtitle/:id",
+      "destination": "http://kajj8808.store:8000/subtitle/:id"
     }
   ]
 }
