--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 
 DATABASE_URL="postgres://postgres.couwosolqwjwffqiaite:KQEeLtCnVftUqRpt@aws-0-ap-northeast-2.pooler.supabase.com:5432/postgres"
+
+MEDIA_SERVER_URL="https://kajj8808.com:8443"
