--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "@prisma/client": "^5.18.0",
+    "htmlparser2": "^9.1.0",
     "next": "14.2.6",
     "prisma": "^5.18.0",
     "react": "^18",
