--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@
 DATABASE_URL="postgres://postgres.couwosolqwjwffqiaite:KQEeLtCnVftUqRpt@aws-0-ap-northeast-2.pooler.supabase.com:5432/postgres"
 
 MEDIA_SERVER_URL="https://kajj8808.com:8443"
+
+COOKIE_PASSWORD="2uaAHyg8Qt1yVnQjvAw6dc8MBnGKenbP"
