--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.1.5",
     "@prisma/client": "^5.18.0",
     "bcrypt": "^5.1.1",
+    "framer-motion": "^11.11.7",
     "htmlparser2": "^9.1.0",
     "iron-session": "^8.0.3",
     "next": "14.2.6",
