--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "@heroicons/react": "^2.1.5",
     "@prisma/client": "^5.21.1",
     "framer-motion": "^12.0.0-alpha.0",
-    "next": "15.0.1",
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "htmlparser2": "^9.1.0",
+    "next": "^15.0.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -22,7 +23,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "15.0.1",
+    "eslint-config-next": "^15.0.2",
     "postcss": "^8",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
