--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "@prisma/client": "^5.21.1",
-    "framer-motion": "^12.0.0-alpha.0",
+    "framer-motion": "^11.11.11",
     "htmlparser2": "^9.1.0",
     "next": "^15.0.2",
     "react": "^18.3.1",
