--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "^15.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "tailwindcss-animated": "^1.1.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
