--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "heroicons": "^2.2.0",
     "htmlparser2": "^10.0.0",
     "lucide-react": "^0.476.0",
+    "motion": "^12.10.4",
     "next": "^15.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
